plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.5'
    id 'io.spring.dependency-management' version '1.1.4'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}


configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    // Hibernate Validator (Bean Validation API 구현체)
    implementation 'org.hibernate.validator:hibernate-validator:6.2.0.Final'
    // Bean Validation API
    implementation 'javax.validation:validation-api:2.0.1.Final'
    // Hibernate Validator가 사용하는 의존성
    implementation 'org.glassfish:jakarta.el:3.0.3'
    //위 3개의 코드는 @Email 어노테이션을 활성화 하기 위한 코드입니다.
}

tasks.named('test') {
    useJUnitPlatform()
}

jar {
    enabled = false
}